tests/baselines/reference/parserComputedPropertyName9.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName9.ts(2,4): error TS1164: Computed property names are not allowed in class property declarations.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName9.ts(2,9): error TS2304: Cannot find name 'Type'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName9.ts (2 errors) ====
    class C {
       [e]: Type
       ~~~
!!! error TS1164: Computed property names are not allowed in class property declarations.
            ~~~~
!!! error TS2304: Cannot find name 'Type'.
    }